2002-10-07  Keisuke Nishida  <knishida@netlab.jp>

	* scanner.l (read_line): Inhibit column 72 warnings after 4 times.

2002-09-30  Keisuke Nishida  <knishida@netlab.jp>

	* cobpp.h (COBPP_PACKAGE): Use PACKAGE_NAME.

2002-09-24  Keisuke Nishida  <knishida@netlab.jp>

	* scanner.l: Do not support single-quoted strings.

2002-09-24  Keisuke Nishida  <knishida@netlab.jp>

	* scanner.l (display_line): Removed.
	(yyinput): Append multiple LF's during concatenating lines.

2002-09-17  Keisuke Nishida  <knishida@netlab.jp>

	* parser.y (yywarn): New function.
	* cobpp.h (COBPP_FORMAT_UNKNOWN): New macro.
	* cobpp.h, cobpp.c (cobpp_source_format_inferred): New variable.
	* cobpp.c (cobpp_source_format): Default to COBPP_FORMAT_UNKNOWN.
	(main): Infer source format here.

	* cobpp.h, cobpp.c (cobpp_warn_trailing_line): New variables.
	* scanner.l (read_line): Show warnings for over column 72.

2002-09-17  Keisuke Nishida  <knishida@netlab.jp>

	* Rename all `cob_*' to `cobpp_*'.

2002-09-09  Keisuke Nishida  <knishida@netlab.jp>

	* scanner.l (read_line): Don't use fgets.

2002-08-20  Keisuke Nishida  <knishida@netlab.jp>

	* scanner.l: Better implementation of line connection.
	Comments in IDENTIFICATION DIVISION are skipped here.

2002-08-12  Keisuke Nishida  <knishida@netlab.jp>

	* cobpp.h (COB_FORMAT_SEMI_FIXED): New macro.
	* cobpp.c (long_options): New option `semi-fixed'.
	* scanner.l (yyinput): Support semi-fixed.
	Skip comments and debugging lines here.

2002-06-07  Keisuke Nishida  <knishida@netlab.jp>

	* parser.y (copy_statement, copy_in, copy_replacing):
	Support "COPY ... IN/OF ..." syntax.
	* scanner.l, scanner.h (include_copybook): Take a library name.

2002-06-04  Keisuke Nishida  <knishida@netlab.jp>

	* Makefile.am (cobpp_CFLAGS): -I$(top_srcdir), not -I$(top_srcdir)/lib.
	* cobpp.c, scanner.l: Updated.

2002-06-03  Keisuke Nishida  <knishida@netlab.jp>

	* Makefile.am (cobpp_LDADD): Add libsupport.a here.
	(cobpp_LIBS): Removed.
