@@ -1,3 +1,9 @@
+2002-11-01  Keisuke Nishida  <knishida@netlab.jp>
+
+	* scanner.l (read_line): Check newline at the end of file.
+
+	* scanner.l (read_line): Check column 7 before post-column 72.
+
 2002-10-07  Keisuke Nishida  <knishida@netlab.jp>
 
 	* scanner.l (read_line): Inhibit column 72 warnings after 4 times.
